Fixed main screen button size on mobile

--- a/styles.css
+++ b/styles.css
@@ -537,6 +537,8 @@ ul {
     }
     #mainButtons {
         width: 25%;
+        font-size: 11pt
+        
     }
 
     #mainButtons:hover {
